Fix issue with images not showing in work container

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -61,3 +61,6 @@
     font:
       size: 24px
     +position(absolute, -3px null null -35px)
+
+  .loading
+    text-align: center
